--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Помощник автоэлектрика</title>
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23a8b8b0'/><circle cx='50' cy='50' r='32' fill='%232c6f3c'/><path d='M40 30 L60 30 L60 40 L70 40 L50 70 L30 40 L40 40 Z' fill='white'/></svg>">
+  <link rel="icon" href="image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23a8b8b0'/><circle cx='50' cy='50' r='32' fill='%232c6f3c'/><path d='M40 30 L60 30 L60 40 L70 40 L50 70 L30 40 L40 40 Z' fill='white'/></svg>">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -190,6 +190,8 @@
       opacity: 0;
       transform: translateY(10px);
       animation: fadeInUp 0.4s forwards;
+      will-change: opacity, transform; /* ← 2.3 */
+      max-width: 100%; /* ← 2.5 */
     }
 
     @keyframes fadeInUp {
@@ -199,6 +201,7 @@
       }
     }
 
+    /* Анимации с задержкой */
     .card:nth-child(1) { animation-delay: 0.05s; }
     .card:nth-child(2) { animation-delay: 0.1s; }
     .card:nth-child(3) { animation-delay: 0.15s; }
@@ -220,15 +223,21 @@
       text-decoration: underline;
     }
 
+    /* Мобильная адаптация */
     @media (max-width: 600px) {
       .controls {
         flex-direction: column;
       }
-      input, select {
+      input, select, button {
         width: 100%;
+        min-width: auto;
       }
       h1 {
         font-size: 1.8rem;
+      }
+      .stats {
+        flex-direction: column;
+        gap: 8px;
       }
     }
   </style>
@@ -352,6 +361,23 @@
       localStorage.setItem('theme', isDark ? 'dark' : 'light');
       themeToggle.textContent = isDark ? '🌙' : '☀️';
     });
+
+    // Иконки для симптомов ← 2.4
+    const SYMPTOM_ICONS = {
+      'не заводится': '🚗',
+      'check engine': '⚠️',
+      'горит чек': '⚠️',
+      'утечка тока': '⚡',
+      'нет зарядки': '🔋',
+      'троит': '💨',
+      'стучит': '🔨',
+      'мертвый аккумулятор': '💀',
+      'короткое замыкание': '💥',
+      'обрыв': '✂️',
+      'модуль зажигания': '🔌',
+      'датчик коленвала': '⚙️',
+      'генератор': '🌀'
+    };
 
     // Иерархия марок и моделей
     const BRAND_HIERARCHY = {
@@ -489,12 +515,20 @@
       }
     }
 
-    function render(problems) {
-      // Скрыть загрузочный экран
-      const loadingEl = document.getElementById('loading');
-      if (loadingEl) {
-        loadingEl.style.display = 'none';
+    // Поддержка Enter ← 2.6
+    document.addEventListener('DOMContentLoaded', () => {
+      const errorInput = document.getElementById('errorInput');
+      if (errorInput) {
+        errorInput.addEventListener('keypress', (e) => {
+          if (e.key === 'Enter') searchByCode();
+        });
+        errorInput.focus(); // ← 2.2
       }
+    });
+
+    function render(problems) {
+      const loadingEl = document.getElementById('loading');
+      if (loadingEl) loadingEl.style.display = 'none';
 
       const el = document.getElementById('results');
       document.getElementById('totalCount').textContent = problems.length;
@@ -507,19 +541,29 @@
         el.innerHTML = '<p>Ничего не найдено.</p>';
         return;
       }
-      el.innerHTML = problems.map(p => `
-        <div class="card">
-          <strong>${p.title}</strong><br>
-          <small>
-            ${p.brand ? 'Марка: ' + p.brand + ' | ' : ''}
-            ${p.model ? 'Модель: ' + p.model + ' | ' : ''}
-            ${p.year ? 'Год: ' + p.year + ' | ' : ''}
-            Симптомы: ${(p.symptoms || []).join(', ')}<br>
-            Ошибки: ${(p.error_codes || []).join(', ')}
-          </small><br>
-          <a href="${p.source_url}" target="_blank">Подробности</a>
-        </div>
-      `).join('');
+
+      el.innerHTML = problems.map(p => {
+        // Иконки для симптомов ← 2.4
+        const symptomsWithIcons = (p.symptoms || []).map(symptom => {
+          const key = Object.keys(SYMPTOM_ICONS).find(k => symptom.toLowerCase().includes(k));
+          const icon = key ? SYMPTOM_ICONS[key] : '🔧';
+          return `${icon} ${symptom}`;
+        }).join(', ');
+
+        return `
+          <div class="card">
+            <strong>${p.title}</strong><br>
+            <small>
+              ${p.brand ? 'Марка: ' + p.brand + ' | ' : ''}
+              ${p.model ? 'Модель: ' + p.model + ' | ' : ''}
+              ${p.year ? 'Год: ' + p.year + ' | ' : ''}
+              Симптомы: ${symptomsWithIcons}<br>
+              Ошибки: ${(p.error_codes || []).join(', ')}
+            </small><br>
+            <a href="${p.source_url}" target="_blank">Подробности</a>
+          </div>
+        `;
+      }).join('');
     }
 
     function filterByBrandModelYear() {
@@ -549,7 +593,6 @@
       render(filtered);
     }
 
-    // Загрузка данных
     render(allProblems);
 
     // Поддержка "Моё авто"
