--- a/vin.html
+++ b/vin.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Расшифровка VIN</title>
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23a8b8b0'/><circle cx='50' cy='50' r='32' fill='%232c6f3c'/><path d='M40 30 L60 30 L60 40 L70 40 L50 70 L30 40 L40 40 Z' fill='white'/></svg>">
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%232b613f'/><circle cx='50' cy='50' r='32' fill='white'/><path d='M40 30 L60 30 L60 40 L70 40 L50 70 L30 40 L40 40 Z' fill='%232b613f'/></svg>">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
   <style>
     :root {
       --bg: #ffffff;
@@ -13,28 +13,15 @@
       --text: #1e293b;
       --text-secondary: #64748b;
       --border: #e2e8f0;
-      --accent: #2c6f3c;
-      --accent-hover: #255d32;
-      --shadow: rgba(0,0,0,0.04);
+      --accent: #2b613f;
+      --accent-hover: #234f34;
       --header-bg: #f1f9f3;
-    }
-    .dark-theme {
-      --bg: #12181a;
-      --bg-card: #1e292d;
-      --text: #e2e8f0;
-      --text-secondary: #94a8b8;
-      --border: #33414a;
-      --accent: #4caf50;
-      --accent-hover: #43a047;
-      --shadow: rgba(0,0,0,0.25);
-      --header-bg: #162123;
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'IBM Plex Mono', monospace;
       background-color: var(--bg);
       color: var(--text);
-      transition: background-color 0.3s, color 0.3s;
       line-height: 1.6;
       padding: 20px;
     }
@@ -44,12 +31,12 @@
     }
     header {
       text-align: center;
-      padding: 24px 0;
+      padding: 28px 0;
       margin-bottom: 24px;
       background-color: var(--header-bg);
-      border-radius: 4px;
+      border-radius: 12px;
     }
-    h1 { font-size: 2rem; color: var(--accent); margin-bottom: 8px; font-weight: 500; }
+    h1 { font-size: 2rem; color: var(--accent); margin-bottom: 10px; }
     .subtitle { color: var(--text-secondary); }
     nav {
       display: flex;
@@ -63,66 +50,47 @@
       color: var(--accent);
       padding: 6px 14px;
       border: 1px solid var(--border);
-      border-radius: 0;
+      border-radius: 20px;
       font-size: 0.95rem;
-      font-weight: 500;
     }
     nav a:hover { background: var(--accent); color: white; }
-    .theme-toggle {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background: var(--bg-card);
-      border: 1px solid var(--border);
-      color: var(--text);
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-    }
     input, button {
-      padding: 10px 14px;
+      padding: 12px 16px;
       font-family: 'IBM Plex Mono', monospace;
       font-size: 1rem;
       border: 1px solid var(--border);
-      border-radius: 0;
+      border-radius: 8px;
       background: var(--bg-card);
       color: var(--text);
       width: 100%;
-      margin: 8px 0;
+      margin: 10px 0;
     }
     button {
       background: var(--accent);
       color: white;
-      border: 1px solid var(--accent);
-      cursor: pointer;
+      border: none;
       font-weight: 500;
-      transition: background 0.15s;
+      cursor: pointer;
     }
     button:hover {
       background: var(--accent-hover);
     }
     .card {
       background: var(--bg-card);
-      padding: 18px;
+      padding: 20px;
       margin: 16px 0;
-      border-radius: 4px;
-      box-shadow: 0 2px 6px var(--shadow);
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
       border-left: 4px solid var(--accent);
     }
-    .error { color: #ef4444; }
-    .success { color: #22c55e; }
+    .info { color: var(--text-secondary); font-size: 0.9rem; margin: 10px 0; }
   </style>
 </head>
 <body>
-  <div class="theme-toggle" id="themeToggle">☀️</div>
   <div class="container">
     <header>
       <h1>Расшифровка VIN</h1>
-      <p class="subtitle">Введите 17-значный VIN вашего автомобиля</p>
+      <p class="subtitle">Введите 17-значный VIN вашего российского автомобиля (LADA, ВАЗ, ГАЗ, УАЗ)</p>
     </header>
 
     <nav>
@@ -130,31 +98,54 @@
       <a href="my-car.html">Мое авто</a>
     </nav>
 
-    <input type="text" id="vinInput" placeholder="Например: X7LLRRA1XMD123456" maxlength="17" />
-    <button onclick="decodeVIN()">Декодировать</button>
+    <input type="text" id="vinInput" placeholder="Например: XTA210990V2162379" maxlength="17" />
+    <button onclick="decodeVIN()">Расшифровать VIN</button>
+    <p class="info">ℹ️ Поддерживаются только российские VIN. Для других авто используйте «Моё авто» → ручной ввод.</p>
 
     <div id="message"></div>
     <div id="result"></div>
-    <button id="saveBtn" style="display:none;" onclick="saveToMyCar()">📦 Сохранить в «Моё авто»</button>
+    <button id="saveBtn" style="display:none;" onclick="saveToMyCar()">✅ Сохранить в «Моё авто»</button>
 
     <script>
-      const themeToggle = document.getElementById('themeToggle');
-      const body = document.body;
-      const savedTheme = localStorage.getItem('theme');
-      if (savedTheme === 'dark') {
-        body.classList.add('dark-theme');
-        themeToggle.textContent = '🌙';
-      }
-      themeToggle.addEventListener('click', () => {
-        body.classList.toggle('dark-theme');
-        const isDark = body.classList.contains('dark-theme');
-        localStorage.setItem('theme', isDark ? 'dark' : 'light');
-        themeToggle.textContent = isDark ? '🌙' : '☀️';
-      });
-
       let currentVINData = null;
 
-      async function decodeVIN() {
+      // База для российских VIN
+      function decodeRussianVIN(vin) {
+        if (!vin.startsWith('XTA')) return null; // LADA / ВАЗ
+        if (!vin.startsWith('XW8')) return null; // GAZ (пример)
+
+        const yearCode = vin[9];
+        const yearMap = {
+          'X': 1999, 'Y': 2000, '1': 2001, '2': 2002, '3': 2003, '4': 2004,
+          '5': 2005, '6': 2006, '7': 2007, '8': 2008, '9': 2009,
+          'A': 2010, 'B': 2011, 'C': 2012, 'D': 2013, 'E': 2014,
+          'F': 2015, 'G': 2016, 'H': 2017, 'J': 2018, 'K': 2019,
+          'L': 2020, 'M': 2021, 'N': 2022, 'P': 2023, 'R': 2024, 'S': 2025
+        };
+        const year = yearMap[yearCode] || 'неизвестен';
+
+        // Определяем модель по символам 4-7
+        const modelCode = vin.substring(3, 7);
+        let model = 'неизвестна';
+        if (modelCode.startsWith('210')) model = "ВАЗ 2101-2107";
+        if (modelCode.startsWith('211')) model = "ВАЗ 2110-2115";
+        if (modelCode.startsWith('217')) model = "Lada Priora";
+        if (modelCode.startsWith('219')) model = "Lada Kalina";
+        if (modelCode.startsWith('218')) model = "Lada Granta";
+        if (modelCode.startsWith('2192')) model = "Lada Kalina 2";
+        if (modelCode.startsWith('XRAY')) model = "Lada XRAY";
+        if (modelCode.startsWith('B15')) model = "Lada Vesta";
+
+        return {
+          brand: "ВАЗ / LADA",
+          model: model,
+          year: year,
+          engine: "—",
+          body: "—"
+        };
+      }
+
+      function decodeVIN() {
         const vin = document.getElementById('vinInput').value.trim().toUpperCase();
         const msg = document.getElementById('message');
         const res = document.getElementById('result');
@@ -169,38 +160,28 @@
           return;
         }
 
-        msg.innerHTML = 'Запрос к серверу...';
-        try {
-          const response = await fetch(`https://auto-api.ru/api/vin/${vin}`);
-          const data = await response.json();
-
-          if (data.error || !data.mark || !data.model) {
-            throw new Error(data.error || 'Не удалось расшифровать VIN');
-          }
-
-          currentVINData = {
-            vin: vin,
-            brand: data.mark,
-            model: data.model,
-            year: data.year || 'неизвестен',
-            engine: data.engine || '',
-            body: data.body || ''
-          };
-
-          res.innerHTML = `
-            <div class="card">
-              <strong>${currentVINData.brand} ${currentVINData.model}</strong><br>
-              Год: ${currentVINData.year}<br>
-              Двигатель: ${currentVINData.engine || '—'}<br>
-              Кузов: ${currentVINData.body || '—'}<br>
-              VIN: ${currentVINData.vin}
-            </div>
-          `;
-          saveBtn.style.display = 'inline-block';
-          msg.innerHTML = '<div class="success">VIN успешно расшифрован!</div>';
-        } catch (err) {
-          msg.innerHTML = `<div class="error">Ошибка: ${err.message || 'сервер недоступен'}</div>`;
+        const decoded = decodeRussianVIN(vin);
+        if (!decoded) {
+          msg.innerHTML = '<div class="error">Поддерживаются только российские VIN (начинаются с XTA, XW8 и др.)</div>';
+          return;
         }
+
+        currentVINData = {
+          vin: vin,
+          ...decoded
+        };
+
+        res.innerHTML = `
+          <div class="card">
+            <strong>${currentVINData.brand} ${currentVINData.model}</strong><br>
+            Год: ${currentVINData.year}<br>
+            Двигатель: ${currentVINData.engine || '—'}<br>
+            Кузов: ${currentVINData.body || '—'}<br>
+            VIN: ${currentVINData.vin}
+          </div>
+        `;
+        saveBtn.style.display = 'inline-block';
+        msg.innerHTML = '<div class="success">✅ VIN успешно расшифрован!</div>';
       }
 
       function saveToMyCar() {
